# SMCinROS

./: .ycm_extra_conf.py  LICENSE  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/acl_msgs/: IMU.h  QuadAttCmd.h  QuadMotors.h  SMCData.h  State.h  ViconState.h
devel/include/roscpp_tutorials/: TwoInts.h  TwoIntsRequest.h  TwoIntsResponse.h
devel/include/rospy_tutorials/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  BadTwoInts.h  BadTwoIntsRequest.h  BadTwoIntsResponse.h  Floats.h  HeaderString.h
devel/include/turtlesim/: Color.h  Kill.h  KillRequest.h  KillResponse.h  Pose.h  SetPen.h  SetPenRequest.h  SetPenResponse.h  Spawn.h  SpawnRequest.h  SpawnResponse.h  TeleportAbsolute.h  TeleportAbsoluteRequest.h  TeleportAbsoluteResponse.h  TeleportRelative.h  TeleportRelativeRequest.h  TeleportRelativeResponse.h
devel/lib/learning_com/: SAPcontrol  SAPcontrol_Openloop  SAPcontrol_sync  listener  talker
devel/lib/optitrack_motive_2_client/: optitrack_motive_2_client_node
devel/lib/pkgconfig/: acl_msgs.pc  learning_com.pc  optitrack_motive_2_client.pc
devel/lib/python2.7/dist-packages/acl_msgs/msg/: _IMU.py  _QuadAttCmd.py  _QuadMotors.py  _SMCData.py  _State.py  _ViconState.py  __init__.py
devel/share/acl_msgs/cmake/: acl_msgs-msg-extras.cmake  acl_msgs-msg-paths.cmake  acl_msgsConfig.cmake
devel/share/learning_com/cmake/: learning_comConfig.cmake
devel/share/optitrack_motive_2_client/cmake/: optitrack_motive_2_clientConfig.cmake
devel/share/roscpp_tutorials/cmake/: roscpp_tutorials-msg-extras.cmake  roscpp_tutorials-msg-paths.cmake  roscpp_tutorialsConfig.cmake
devel/share/roseus/ros/acl_msgs/: manifest.l
devel/share/roseus/ros/roscpp_tutorials/: manifest.l
devel/share/roseus/ros/rospy_tutorials/: manifest.l
devel/share/roseus/ros/turtlesim/: manifest.l
devel/share/rospy_tutorials/cmake/: rospy_tutorials-msg-extras.cmake  rospy_tutorials-msg-paths.cmake  rospy_tutorialsConfig-version.cmake  rospy_tutorialsConfig.cmake
devel/share/turtlesim/cmake/: turtlesim-msg-extras.cmake  turtlesim-msg-paths.cmake  turtlesimConfig.cmake
src/acl_msgs/: README.md  package.xml
src/acl_msgs/msg/: ViconState.msg
src/acl_msgss/: CMakeLists.txt
src/acl_msgss/msg/: QuadAttCmd.msg  QuadMotors.msg  SMCData.msg
src/launch/: old_runSMC.launch  runSMC (复件).launch  runSMC.launch
src/learning_com/: CMakeLists.txt  package.xml
src/learning_com/include/learning_com/: Data_def.h
src/learning_com/src/: SAPcontrol.cpp  SAPcontrol_noSMC.cpp  SAPcontrol_sync.cpp
src/optitrack_motive_1.8_client/: README.md
src/optitrack_motive_1.8_client/include/optitrack_motive_2_client/: motionCaptureClientFramework.cpp  motionCaptureClientFramework.h
src/optitrack_motive_1.8_client/src/: optitrack_motive_2_client_node.cpp
(+88 files in other folders)
